@@ -727,13 +727,7 @@ void basicFind(int dowhat)
 	if(insensitiveSearch==true)
 		flags=(GtkSourceSearchFlags)(GTK_SOURCE_SEARCH_TEXT_ONLY|GTK_SOURCE_SEARCH_CASE_INSENSITIVE);
 
-//	searchtext=g_strcompress(gtk_entry_get_text((GtkEntry*)findBox));
-
-
-	searchtext=g_strcompress(gtk_combo_box_text_get_active_text((GtkComboBoxText*)findEntryDrop));
-
-printf("search text=%s\n",searchtext);
-
+	searchtext=g_strcompress(gtk_entry_get_text((GtkEntry*)findBox));
 	replacetext=g_strcompress(gtk_entry_get_text((GtkEntry*)replaceBox));
 
 	if(!gtk_text_buffer_get_selection_bounds((GtkTextBuffer*)page->buffer,&page->match_start,&page->match_end))
@@ -925,8 +919,7 @@ void doFindReplace(GtkDialog *dialog,gint response_id,gpointer user_data)
 
 	if(response_id!=REPLACE)
 		{
-//			drop=findDropBox;
-			drop=findEntryDrop;
+			drop=findDropBox;
 			entry=findBox;
 			list=findList;
 		}
@@ -939,16 +932,12 @@ void doFindReplace(GtkDialog *dialog,gint response_id,gpointer user_data)
 
 	itemsReplaced=-1;
 
-//	edata=gtk_entry_get_text((GtkEntry*)entry);
-	edata=gtk_combo_box_text_get_active_text((GtkComboBoxText*)drop);
-printf("%s\n",edata);
+	edata=gtk_entry_get_text((GtkEntry*)entry);
 	if(list==NULL)
 		{
 			list=g_slist_append(list,strdup(edata));
 			gtk_combo_box_text_append_text((GtkComboBoxText*)drop,(const char*)list->data);
 			gtk_combo_box_set_active((GtkComboBox*)drop,0);
-
-			//gtk_combo_box_text_append_text((GtkComboBoxText*)drop,edata);
 		}
 	else
 		{
