@@ -1,4 +1,5 @@
 0.2.5
+Changed Find/Replace Entry/Dropdowns to Combo box with entry.
 
 0.2.4
 Re-done Find/Replace layout.
